<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
    <artifactId>card-operations-es</artifactId>

    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <relativePath/>
        <version>2.5.3</version> <!-- lookup parent from repository -->
    </parent>

    <groupId>org.design.jab</groupId>
    <modelVersion>4.0.0</modelVersion>
    <name>Card Operations ES</name>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring-data-bom.version>2021.0.3</spring-data-bom.version>
    </properties>

    <version>0.1.0-SNAPSHOT</version>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <artifactId>spring-data-bom</artifactId>
                <groupId>org.springframework.data</groupId>
                <type>pom</type>
                <version>${spring-data-bom.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <artifactId>spring-boot-starter-web</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-validation</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>

        <dependency>
            <artifactId>jmolecules-ddd</artifactId>
            <groupId>org.jmolecules</groupId>
            <version>1.2.0</version>
        </dependency>

        <dependency>
            <artifactId>vavr</artifactId>
            <groupId>io.vavr</groupId>
            <version>0.10.4</version>
        </dependency>

        <dependency>
            <groupId>org.occurrent</groupId>
            <artifactId>eventstore-mongodb-spring-blocking</artifactId>
            <version>0.13.1</version>
        </dependency>

        <dependency>
            <groupId>org.occurrent</groupId>
            <artifactId>cloudevent-converter-jackson</artifactId>
            <version>0.13.1</version>
        </dependency>

        <dependency>
            <groupId>io.cloudevents</groupId>
            <artifactId>cloudevents-json-jackson</artifactId>
            <version>2.2.0</version>
        </dependency>

        <dependency>
            <artifactId>commons-lang3</artifactId>
            <groupId>org.apache.commons</groupId>
            <version>3.12.0</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <artifactId>spring-boot-starter-test</artifactId>
            <groupId>org.springframework.boot</groupId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>archunit-junit5</artifactId>
            <groupId>com.tngtech.archunit</groupId>
            <scope>test</scope>
            <version>0.22.0</version>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mongodb</artifactId>
            <version>1.16.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.5.5</version>
                <groupId>org.springframework.boot</groupId>
            </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            --enable-preview
          </compilerArgs>
          <release>${java.version}</release>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.0.0-M5</version>
      </plugin>
            <plugin>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <append>true</append>
                    <output>file</output>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <id>jacoco-initialize</id>
                    </execution>
                    <execution>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <id>jacoco-site</id>
                        <phase>verify</phase>
                    </execution>
                </executions>
                <groupId>org.jacoco</groupId>
                <version>0.8.7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
